End of section 18

--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -54,7 +54,7 @@
         <div *ngIf="container === 'Outbox'">
           <img
             class="img-circle rounded-circle mr-2"
-            src="{{ message.recipientPhotoUrl || './assets.user.png' }}"
+            src="{{ message.recipientPhotoUrl || './assets/user.png' }}"
             alt="{{ message.recipientUsername }}"
           />
           <strong>{{ message.recipientUsername | titlecase }}</strong>
@@ -62,7 +62,7 @@
         <div *ngIf="container !== 'Outbox'">
           <img
             class="img-circle rounded-circle mr-2"
-            src="{{ message.senderPhotoUrl || './assets.user.png' }}"
+            src="{{ message.senderPhotoUrl || './assets/user.png' }}"
             alt="{{ message.senderUsername }}"
           />
           <strong>{{ message.senderUsername | titlecase }}</strong>
